--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,23 @@ body{
 #sidebar.visible{
     left:0px;
     transition:left 0.3s linear;
+    
 }
 #sidebar.visible i {
    
    font-size: 24px; 
    float: left;
 }
+
+#sidebar #test {
+    visibility: hidden;
+}
+
+#sidebar.visible #test {
+display: block;
+visibility: visible;
+}
+
 #sidebar.visible #user {
     font-size:80px;
     margin-left: 25%;
@@ -61,9 +72,6 @@ white-space: nowrap;
     font-size:90px;	
     color:#ccc;
 
-}
-#sidebar.visible #test {
-display: block;
 }
 
 
